feat(footer): add it

--- a/src/content/about-me.mdx
+++ b/src/content/about-me.mdx
@@ -18,26 +18,27 @@ As a result of this and many interactions with community development, I’ve beg
 
 ##### Coding
 
-React, React Native, Typescript, Graphql, Apollo, Styled-components, Nextjs, Gatsbyjs, unit tests, blockchain, and other cool stuff...
+_React, React Native, Typescript, Graphql, Apollo, Styled-components, Nextjs, Gatsbyjs, unit tests, blockchain, and other cool stuff..._
 
 ##### Design
 
-The interface design is much more than ship layouts, and the development process must be not only accurate, but work together and aim at the same result.
+_The interface design is much more than ship layouts, and the development process must be not only accurate, but work together and aim at the same result._
 
 <span>
 
 ### Values
 
-Reliable
-Given a challenge, consider it done.
+##### Reliable
+
+_Given a challenge, consider it done._
 
 ##### Expert
 
-Not just done, but made with remarkable quality.
+_Not just done, but made with remarkable quality._
 
 ##### Humble
 
-There's always room for improvement.
+_There's always room for improvement._
 
 </span>
 
