feat(blog): list and content

--- a/src/content/projects/advanced-blog-system-in-gatsby.mdx
+++ b/src/content/projects/advanced-blog-system-in-gatsby.mdx
@@ -1,9 +1,11 @@
 export const metadata = {
+  priority: 3,
+  type: 'article',
   title: 'Building advanced blog system in Gatsby and React',
   tagline:
     'Template of a complete blog from scratch using React and Gatsby with pagination, categories, featured post, author, SEO and navigation.',
   date: '2019-05-02T15:06:01.607Z',
-  categories: ['React', 'Gatsby', 'Starter', 'Template'],
+  categories: ['Gatsby starter', 'Template', 'Tutorial'],
   cover: './images/advanced-blog-system-in-gatsby/asset-1.png',
 }
 
