--- a/src/content/projects/css-display-grid-and-sketch-layout.mdx
+++ b/src/content/projects/css-display-grid-and-sketch-layout.mdx
@@ -1,9 +1,11 @@
 export const metadata = {
-  title: 'CSS Display Grid and Sketch Layout',
+  priority: 5,
+  type: 'article',
+  title: 'CSS Grid and Sketch Layout',
   tagline: 'Building super layouts that so far are not possible.',
   date: '2017-09-23T13:00:43.958Z',
   categories: ['CSS', 'Design'],
-  cover: './css-display-grid-and-sketch-layout/images/asset-1.jpeg',
+  cover: './images/css-display-grid-and-sketch-layout/asset-1.jpeg',
 }
 
 ### How the web layout works
