--- a/src/content/projects/bringing-your-blockchain-business-to-react-native.mdx
+++ b/src/content/projects/bringing-your-blockchain-business-to-react-native.mdx
@@ -1,9 +1,11 @@
 export const metadata = {
+  priority: 1,
+  type: 'article',
   title: 'Bringing your blockchain business to React Native',
   tagline:
     'A humble perspective of what it was like to create a Crypto Currency wallet using React Native and its main challenges during the planning and the development stages.',
   date: '2020-03-23T19:28:06.529Z',
-  categories: ['ReactNative', 'Blockchain'],
+  categories: ['React Native', 'Blockchain', 'Development thoughts'],
   cover: './images/bringing-your-blockchain-business-to-react-native/hero.jpeg',
 }
 
