fix(errors): content and logs

--- a/src/content/projects/advanced-blog-system-in-gatsby.mdx
+++ b/src/content/projects/advanced-blog-system-in-gatsby.mdx
@@ -11,7 +11,7 @@ export const metadata = {
 
 👉 Check out the [demo](https://gatsby-advanced-blog-system.danilowoz.now.sh/blog) and [source](https://github.com/danilowoz/gatsby-advanced-blog-system).
 
-![Gatsbyjs](./asset-2.jpeg)
+![Gatsbyjs](/images/advanced-blog-system-in-gatsby/asset-2.jpeg)
 
 ### What’s Gatsby.js?
 
