--- a/src/content/projects/css-display-grid-and-sketch-layout.mdx
+++ b/src/content/projects/css-display-grid-and-sketch-layout.mdx
@@ -5,7 +5,7 @@ export const metadata = {
   tagline: 'Building super layouts that so far are not possible.',
   date: '2017-09-23T13:00:43.958Z',
   categories: ['CSS', 'Design'],
-  cover: './images/css-display-grid-and-sketch-layout/asset-1.jpeg',
+  cover: '/images/css-display-grid-and-sketch-layout/asset-1.jpeg',
 }
 
 ### How the web layout works
@@ -57,7 +57,7 @@ Let’s create an of 12-column grid and try to understand what has changed:
 }
 ```
 
-![12-column grid in Display grid and you can see the full code [here](https://codepen.io/danilowzn/pen/NvzYoN)](./asset-2.png)
+![12-column grid in Display grid and you can see the full code [here](https://codepen.io/danilowzn/pen/NvzYoN)](/images/css-display-grid-and-sketch-layout/asset-2.png)
 
 Only by using this **amount of the code**, the elements will already fit inside the grid and will never break or exceed the configured width — a problem that existed on CSS frameworks. And we can still easily get all these values from Sketch.
 
@@ -79,7 +79,7 @@ If you wish to learn and understand more about the syntax and distribution optio
 
 First you need to allow the layout view in Sketch by using the command “Option + L” and then you just need to configure it on the View > Canvas > Layout Settings. As you can see we use the same values for both CSS and Sketch.
 
-![Layout settings](./asset-3.png)
+![Layout settings](/images/css-display-grid-and-sketch-layout/asset-3.png)
 
 Incredibly simple and beautiful 🙂
 
@@ -116,7 +116,7 @@ Again, we need to define the columns and rows of the layout, and then we start n
 }
 ```
 
-![Classic desktop website, but in display grid and you can see the full code [here](https://codepen.io/danilowzn/pen/rzRzzE?editors=1100)](./asset-4.jpeg)
+![Classic desktop website, but in display grid and you can see the full code [here](https://codepen.io/danilowzn/pen/rzRzzE?editors=1100)](/images/css-display-grid-and-sketch-layout/asset-4.jpeg)
 
 And to change the layout in the mobile you just have to set up the layout, like this:
 
@@ -128,7 +128,7 @@ And to change the layout in the mobile you just have to set up the layout, like 
 }
 ```
 
-![Classic mobile website, you can see the full code [here](https://codepen.io/danilowzn/pen/rzRzzE?editors=1100)](./asset-5.jpeg)
+![Classic mobile website, you can see the full code [here](https://codepen.io/danilowzn/pen/rzRzzE?editors=1100)](/images/css-display-grid-and-sketch-layout/asset-5.jpeg)
 
 As you can see, it doesn’t matter the order or position of HTML, because what really matters is how we set the layout position in CSS.
 
@@ -138,11 +138,11 @@ You will be able to create more dynamic responsive layouts and with more distinc
 
 To make the changes clearer, imagine a desktop layout that looks like this:
 
-![Layout grid on desktop](./asset-6.jpeg)
+![Layout grid on desktop](/images/css-display-grid-and-sketch-layout/asset-6.jpeg)
 
 On the mobile it can look like this:
 
-![At same grid on mobile](./asset-7.jpeg)
+![At same grid on mobile](/images/css-display-grid-and-sketch-layout/asset-7.jpeg)
 
 Can you see the new possibilities?
 
