feat(blog): post style

--- a/src/content/projects/advanced-blog-system-in-gatsby.mdx
+++ b/src/content/projects/advanced-blog-system-in-gatsby.mdx
@@ -7,6 +7,7 @@ export const metadata = {
   date: '2019-05-02T15:06:01.607Z',
   categories: ['Gatsby starter', 'Template', 'Tutorial'],
   cover: './images/advanced-blog-system-in-gatsby/asset-1.png',
+  coverCredit: 'Photo by Fred Jesus',
 }
 
 👉 Check out the [demo](https://gatsby-advanced-blog-system.danilowoz.now.sh/blog) and [source](https://github.com/danilowoz/gatsby-advanced-blog-system).
