--- a/src/content/projects/atomic-design-with-react.mdx
+++ b/src/content/projects/atomic-design-with-react.mdx
@@ -7,6 +7,7 @@ export const metadata = {
   date: '2018-01-08T19:28:06.529Z',
   categories: ['Design', 'Methodology', 'Storybook'],
   cover: '/images/atomic-design-with-react/asset-1.jpeg',
+  coverCredit: 'Photo by Danilo Woznica',
 }
 
 I have recently had the opportunity to work on a new product from scratch made in React and PWA with the well-crafted and componentized UI at Cheesecake. However, when we discussed with the whole team the best way to approach the development, we ended up having the same old problems that have happened in most past projects, such as:
@@ -18,26 +19,27 @@ I have recently had the opportunity to work on a new product from scratch made i
 - Repeated code;
 - Side effects;
 - Very specific components to each pages;
-  We’ve started to build the CSS architecture using the [ITCSS](https://www.xfive.co/blog/itcss-scalable-maintainable-css-architecture/) methodology that organizes the style files on stacks from generics styles to the specifics ones, which helps you to scale large projects easily. But along with ITCSS, we were using CSS Modules to scope the components, so we noticed that component stack was getting huge and even the generic styles were being componentized and reused within other one.
-  That was the moment in which we paused to rethink our architecture and how we could set the components in a more distributed and organized way. Then we found a methodology called [**Atomic Design**](http://bradfrost.com/blog/post/atomic-web-design/) that creates multiples stacks of components, with different hierarchies of complexity and dependence.
-  ![Atomic Design hierarchy](/images/atomic-design-with-react/asset-2.png)
+
+We’ve started to build the CSS architecture using the [ITCSS](https://www.xfive.co/blog/itcss-scalable-maintainable-css-architecture/) methodology that organizes the style files on stacks from generics styles to the specifics ones, which helps you to scale large projects easily. But along with ITCSS, we were using CSS Modules to scope the components, so we noticed that component stack was getting huge and even the generic styles were being componentized and reused within other one.
+That was the moment in which we paused to rethink our architecture and how we could set the components in a more distributed and organized way. Then we found a methodology called [**Atomic Design**](http://bradfrost.com/blog/post/atomic-web-design/) that creates multiples stacks of components, with different hierarchies of complexity and dependence.
+![Atomic Design hierarchy](/images/atomic-design-with-react/asset-2.png)
 
 ### What is Atomic Design?
 
 Popularly known within the design world, Atomic Design helps to build consistent, solid and reusable design systems. Plus, in the world of React, Vue and frameworks that stimulate the componentization, Atomic Design is used unconsciously; but when used in the right way, it becomes a powerful ally for developers.
 The name Atomic Design comes from the idea of separating the components in atoms, molecules, organisms, templates and pages, like in the image above. But what are the responsibilities of each separated part?
 
-#### Atoms
+### Atoms
 
 ![Example of atomic component](/images/atomic-design-with-react/asset-3.png)
 Atoms are the smallest possible components, such as buttons, titles, inputs or event color pallets, animations, and fonts. They can be applied on any context, globally or within other components and templates, besides having many states, such as this example of button: disabled, hover, different sizes, etc.
 
-#### Molecules
+### Molecules
 
 ![Example of molecule component](/images/atomic-design-with-react/asset-4.png)
 They are the composition of one or more components of atoms. Here we begin to compose complex components and reuse some of those components. Molecules can have their own properties and create functionalities by using atoms, which don’t have any function or action by themselves.
 
-#### Organisms
+### Organisms
 
 ![Example of organisms component](/images/atomic-design-with-react/asset-5.png)
 Organisms are the combination of molecules that work together or even with atoms that compose more elaborate interfaces. At this level, the components begin to have the final shape, but they are still ensured to be independent, portable and reusable enough to be reusable in any content.
@@ -54,7 +56,7 @@ In this state we stop composing components and begin to set their context. Moreo
 
 Pages are the navigate parts of the application and it’s where the components are distributed in one specific template. The components get real content and they’re connected with the whole application. At this stage, we can test the efficiency of the design system to analyse if all the components are independent enough or if we need to split them in smaller parts.
 
-### React + Atomic Design
+## React + Atomic Design
 
 When we started to use Atomic Design within React we had to adjust some rules of the methodology to ensure that components were reused as much as possible, that they were stateless, without styles of positions and very specific margins so to avoid any side effects in the pages of application.
 
@@ -68,7 +70,7 @@ So we were able to write a few rules:
 4.  **Templates** have only one function: to set the grid of pages but never positions of specific components;
 5.  **Pages** render the components with a template defined and it’s here that the **Atomic Design** will be connected to the rest of the application;
 
-### Let’s code
+## Let’s code
 
 What I will show here is everything in a [**boilerplate on GitHub**](https://github.com/danilowoz/react-atomic-design)**,** which you can test and then start your projects using Atomic Design, so let’s do it:
 
@@ -92,7 +94,7 @@ And the coolest part of the Storybook is that you can add some ‘addons’, suc
 
 ![Proptypes table](/images/atomic-design-with-react/asset-11.png)
 
-### Conclusion
+## Conclusion
 
 At the end of project, we reached the initial goals and we believe we left a good legacy, a structure which ensures that the project can grow and that other developers can understand the architecture quickly. Maybe we initially spent some extra time writing stories and etc, but the more the project grows, the more the benefits make clear why we should use such architecture.
 
