--- a/src/content/projects/css-display-grid-and-sketch-layout.mdx
+++ b/src/content/projects/css-display-grid-and-sketch-layout.mdx
@@ -6,6 +6,7 @@ export const metadata = {
   date: '2017-09-23T13:00:43.958Z',
   categories: ['CSS', 'Design'],
   cover: '/images/css-display-grid-and-sketch-layout/asset-1.jpeg',
+  coverCredit: 'Photo by Danilo Woznica',
 }
 
 ### How the web layout works
