--- a/src/content/projects/bringing-your-blockchain-business-to-react-native.mdx
+++ b/src/content/projects/bringing-your-blockchain-business-to-react-native.mdx
@@ -6,7 +6,8 @@ export const metadata = {
     'A humble perspective of what it was like to create a Crypto Currency wallet using React Native and its main challenges during the planning and the development stages.',
   date: '2020-03-23T19:28:06.529Z',
   categories: ['React Native', 'Blockchain', 'Development thoughts'],
-  cover: './images/bringing-your-blockchain-business-to-react-native/hero.jpeg',
+  cover: '/images/bringing-your-blockchain-business-to-react-native/hero.jpeg',
+  coverCredit: 'Photo by Fred Jesus',
 }
 
 Crypto wallets and Decentralised Applications ([dApp's](https://blockgeeks.com/guides/dapps/)) are becoming more popular each day. It is already possible to find a lot of industries adopting a decentralized approach: financial business, social networks, insurance, supply chain, only to mention a few.
