--- a/src/content/projects/advanced-blog-system-in-gatsby.mdx
+++ b/src/content/projects/advanced-blog-system-in-gatsby.mdx
@@ -6,7 +6,7 @@ export const metadata = {
     'Template of a complete blog from scratch using React and Gatsby with pagination, categories, featured post, author, SEO and navigation.',
   date: '2019-05-02T15:06:01.607Z',
   categories: ['Gatsby starter', 'Template', 'Tutorial'],
-  cover: './images/advanced-blog-system-in-gatsby/asset-1.png',
+  cover: '/images/advanced-blog-system-in-gatsby/asset-1.png',
   coverCredit: 'Photo by Fred Jesus',
 }
 
