fix(content): update

--- a/src/content/projects/atomic-design-with-react.mdx
+++ b/src/content/projects/atomic-design-with-react.mdx
@@ -1,11 +1,11 @@
 export const metadata = {
   priority: 2,
   type: 'article',
-  title: 'Atomic Design and ReactJs',
+  title: 'Atomic Design and ReactJS',
   tagline:
     'How the Atomic Design methodology allowed me to create a great design system from scratch and made me a better developer.',
   date: '2018-01-08T19:28:06.529Z',
-  categories: ['Design', 'Methodology', 'Storybook'],
+  categories: ['Article', 'Methodology', 'Storybook'],
   cover: '/images/atomic-design-with-react/asset-1.jpeg',
   coverCredit: 'Photo by Danilo Woznica',
 }
