--- a/src/content/projects/my-own-styled-components.mdx
+++ b/src/content/projects/my-own-styled-components.mdx
@@ -6,6 +6,6 @@ export const metadata = {
   date: '2019-01-01T15:06:01.607Z',
   tagline:
     'My own implementation of styled-components within 100 lines of code.',
-  categories: [],
+  categories: ['Project'],
   cover: './images/advanced-blog-system-in-gatsby/asset-1.png',
 }
