--- a/src/content/projects/react-native-styl.mdx
+++ b/src/content/projects/react-native-styl.mdx
@@ -5,12 +5,6 @@ export const metadata = {
   title: 'Github: React Native Styl',
   date: '2020-05-01T15:06:01.607Z',
   tagline: 'Easiest way to write stylesheets and free of dependencies.',
-  categories: [
-    'writing-stylesheets',
-    'typescript',
-    'micro-library',
-    'react-native',
-    'stylesheet',
-  ],
+  categories: ['Project', 'Typescript', 'React Native', 'Stylesheet'],
   cover: './images/advanced-blog-system-in-gatsby/asset-1.png',
 }
