--- a/src/content/projects/wipe.mdx
+++ b/src/content/projects/wipe.mdx
@@ -6,6 +6,6 @@ export const metadata = {
   date: '2019-01-01T15:06:01.607Z',
   tagline:
     "It's a library to reset default styles with some opinionated and great changes.",
-  categories: ['reset-css', 'css  ', 'reset'],
+  categories: ['Project', 'reset-css', 'css  ', 'reset'],
   cover: './images/advanced-blog-system-in-gatsby/asset-1.png',
 }
