--- a/src/content/projects/create-content-loader.mdx
+++ b/src/content/projects/create-content-loader.mdx
@@ -5,7 +5,7 @@ export const metadata = {
   date: '2020-01-01T15:06:01.607Z',
   title: 'Design tool: Create content loader',
   tagline:
-    'Create fully customizable skeleton animations for your website with React Content Loader',
+    'Create fully customizable skeleton animations for your website with React Content Loader.',
   categories: ['Design tool', 'Skeleton', 'React', 'React Native'],
   cover: './images/react-content-loader/cover-create.png',
 }
