--- a/src/content/projects/css-display-grid-and-sketch-layout.mdx
+++ b/src/content/projects/css-display-grid-and-sketch-layout.mdx
@@ -4,7 +4,7 @@ export const metadata = {
   title: 'CSS Grid and Sketch Layout',
   tagline: 'Building super layouts that so far are not possible.',
   date: '2017-09-23T13:00:43.958Z',
-  categories: ['CSS', 'Design'],
+  categories: ['Article', 'CSS', 'Design'],
   cover: '/images/css-display-grid-and-sketch-layout/asset-1.jpeg',
   coverCredit: 'Photo by Danilo Woznica',
 }
