--- a/src/content/projects/atomic-design-with-react.mdx
+++ b/src/content/projects/atomic-design-with-react.mdx
@@ -113,3 +113,11 @@ However we could see that this architecture probably doesn’t work for every pr
 [Using React within a design system](https://medium.com/buildit/using-react-within-a-design-system-73d4bb0cc822)
 
 [Atomic components managing dynamic react components using atomic design](https://medium.com/@yejodido/atomic-components-managing-dynamic-react-components-using-atomic-design-part-1-5f07451f261f)
+
+<aside>
+  <h4>Check out the result of this article:</h4>
+
+  <a href="https://github.com/danilowoz/react-atomic-design" target="_blank" rel="noreferrer">
+    Codebase on Github
+  </a>
+</aside>
