--- a/src/content/projects/css-display-grid-and-sketch-layout.mdx
+++ b/src/content/projects/css-display-grid-and-sketch-layout.mdx
@@ -124,7 +124,11 @@ And to change the layout in the mobile you just have to set up the layout, like 
 ```css
 @media screen and (max-width: 768px) {
   .container {
-    grid-template-areas: 'header header header' 'article article article' 'sidebar sidebar sidebar' 'footer footer footer';
+    grid-template-areas:
+      'header header header'
+      'article article article'
+      'sidebar sidebar sidebar'
+      'footer footer footer';
   }
 }
 ```
