feat(post): improves

--- a/src/content/projects/advanced-blog-system-in-gatsby.mdx
+++ b/src/content/projects/advanced-blog-system-in-gatsby.mdx
@@ -8,6 +8,7 @@ export const metadata = {
   categories: ['Article', 'GatsbyJS', 'Template', 'Tutorial'],
   cover: '/images/advanced-blog-system-in-gatsby/asset-1.png',
   coverCredit: 'Photo by Fred Jesus',
+  timeToRead: '7 min read',
 }
 
 ![Gatsbyjs](/images/advanced-blog-system-in-gatsby/asset-2.jpeg)
