--- a/src/content/projects/atomic-design-with-react.mdx
+++ b/src/content/projects/atomic-design-with-react.mdx
@@ -8,6 +8,7 @@ export const metadata = {
   categories: ['Article', 'Methodology', 'Storybook'],
   cover: '/images/atomic-design-with-react/asset-1.jpeg',
   coverCredit: 'Photo by Danilo Woznica',
+  timeToRead: '5 min read',
 }
 
 I have recently had the opportunity to work on a new product from scratch made in React and PWA with the well-crafted and componentized UI at Cheesecake. However, when we discussed with the whole team the best way to approach the development, we ended up having the same old problems that have happened in most past projects, such as:
