--- a/src/content/projects/bringing-your-blockchain-business-to-react-native.mdx
+++ b/src/content/projects/bringing-your-blockchain-business-to-react-native.mdx
@@ -8,6 +8,7 @@ export const metadata = {
   categories: ['Article', 'React Native', 'Blockchain', 'Thoughts'],
   cover: '/images/bringing-your-blockchain-business-to-react-native/hero.jpeg',
   coverCredit: 'Photo by Fred Jesus',
+  timeToRead: '8 min read',
 }
 
 Crypto wallets and Decentralised Applications ([dApp's](https://blockgeeks.com/guides/dapps/)) are becoming more popular each day. It is already possible to find a lot of industries adopting a decentralized approach: financial business, social networks, insurance, supply chain, only to mention a few.
