--- a/src/content/projects/css-display-grid-and-sketch-layout.mdx
+++ b/src/content/projects/css-display-grid-and-sketch-layout.mdx
@@ -7,6 +7,7 @@ export const metadata = {
   categories: ['Article', 'CSS', 'Design'],
   cover: '/images/css-display-grid-and-sketch-layout/asset-1.jpeg',
   coverCredit: 'Photo by Danilo Woznica',
+  timeToRead: '4 min read',
 }
 
 ### How the web layout works
