feat(blog): amp version

--- a/src/content/projects/advanced-blog-system-in-gatsby.mdx
+++ b/src/content/projects/advanced-blog-system-in-gatsby.mdx
@@ -6,12 +6,16 @@ export const metadata = {
     'Template of a complete blog from scratch using React and Gatsby with pagination, categories, featured post, author, SEO and navigation.',
   date: '2019-05-02T15:06:01.607Z',
   categories: ['Article', 'GatsbyJS', 'Template', 'Tutorial'],
-  cover: '/images/advanced-blog-system-in-gatsby/asset-1.png',
+  cover: '/images/advanced-blog-system-in-gatsby/cover.jpg',
   coverCredit: 'Photo by Fred Jesus',
   timeToRead: '7 min read',
 }
 
-![Gatsbyjs](/images/advanced-blog-system-in-gatsby/asset-2.jpeg)
+<img
+  src="/images/advanced-blog-system-in-gatsby/asset-2.jpeg"
+  height="253"
+  width="600"
+/>
 
 ### What’s Gatsby.js?
 
