--- a/src/content/projects/bringing-your-blockchain-business-to-react-native.mdx
+++ b/src/content/projects/bringing-your-blockchain-business-to-react-native.mdx
@@ -6,7 +6,7 @@ export const metadata = {
     'A humble perspective of what it was like to create a Crypto Currency wallet using React Native and its main challenges during the planning and the development stages.',
   date: '2020-03-23T19:28:06.529Z',
   categories: ['Article', 'React Native', 'Blockchain', 'Thoughts'],
-  cover: '/images/bringing-your-blockchain-business-to-react-native/hero.jpeg',
+  cover: '/images/bringing-your-blockchain-business-to-react-native/cover.jpg',
   coverCredit: 'Photo by Fred Jesus',
   timeToRead: '8 min read',
 }
