--- a/src/content/projects/coverify.mdx
+++ b/src/content/projects/coverify.mdx
@@ -7,5 +7,5 @@ export const metadata = {
     'Coverify is a web tool to create yourself artwork, where you can apply different fonts, colors and a ton of images from Unsplash; and upload it directly on Spotify.',
   date: '2020-04-01T15:06:01.607Z',
   categories: ['Design tool', 'Spotify API', 'Album cover'],
-  cover: './images/coverify.png',
+  cover: './images/coverify.jpg',
 }
