feat(site): design improves

--- a/src/content/projects/wipe.mdx
+++ b/src/content/projects/wipe.mdx
@@ -2,7 +2,7 @@ export const metadata = {
   priority: 5,
   type: 'github',
   link: 'https://github.com/danilowoz/wipe.css',
-  title: 'Github: Wipe.css',
+  title: 'Wipe.css',
   date: '2019-01-01T15:06:01.607Z',
   tagline:
     "It's a library to reset default styles with some opinionated and great changes.",
