--- a/src/content/projects/my-own-styled-components.mdx
+++ b/src/content/projects/my-own-styled-components.mdx
@@ -2,7 +2,7 @@ export const metadata = {
   priority: 5,
   type: 'github',
   link: 'https://github.com/danilowoz/my-styled-component',
-  title: 'Github: Styled-component',
+  title: 'My very own Styled-component',
   date: '2019-01-01T15:06:01.607Z',
   tagline:
     'My own implementation of styled-components within 100 lines of code.',
