--- a/src/content/projects/react-native-styl.mdx
+++ b/src/content/projects/react-native-styl.mdx
@@ -2,7 +2,7 @@ export const metadata = {
   priority: 3,
   type: 'github',
   link: 'https://github.com/danilowoz/react-native-styl',
-  title: 'Github: React Native Styl',
+  title: 'React Native: React Native Styl',
   date: '2020-05-01T15:06:01.607Z',
   tagline: 'Easiest way to write stylesheets and free of dependencies.',
   categories: ['Project', 'Typescript', 'React Native', 'Stylesheet'],
