fix(ui): improves

--- a/src/content/about-me.mdx
+++ b/src/content/about-me.mdx
@@ -6,9 +6,9 @@ I wasn’t always a developer, and honestly, I don’t know how I became one. Bu
 
 My first experience with development was implementing my own layouts in the oldest fashioned way possible - HTML, CSS, and jQuery. Then I saw there an opportunity to do something better than I was used to seeing on the web. From that moment on, I went through a couple of digital agencies where I was able to improve my hard skills a lot, thanks to fantastic people I had the chance to meet.
 
-After spending some time on a new challenge, working with a huge product that influenced thousands of people a day, I was able to realize what is the real impact of my job in development and that I need to always push myself.
+Then after spending some time on a new challenge, working with a huge product that influenced thousands of people a day, I was able to realize what is the real impact of my job in development and that I need to always push myself. As a result of this and many interactions with the development community, I’ve begun writing some open-source projects, which gave me a lot of opportunities, from working with many awesome people from all around the world to getting a new position abroad.
 
-As a result of this and many interactions with the development community, I’ve begun writing some open-source projects, which gave me a lot of opportunities, from working with many awesome people from all around the world to getting a new position abroad. Therefore, the main lesson so far is that the more I share knowledge and teach my colleagues, the more I see that my learning journey is far from over.
+Therefore, the main lesson so far is that the more I share knowledge and teach my colleagues, the more I see that my learning journey is far from over.
 
 </article>
 
