--- a/src/content/projects/bringing-your-blockchain-business-to-react-native.mdx
+++ b/src/content/projects/bringing-your-blockchain-business-to-react-native.mdx
@@ -19,7 +19,7 @@ There is a lot of fuss around React Native versus native apps – and even thoug
 
 ## Background
 
-We set ourselves to challenge precisely that.
+We at [Significa](https://www.significa.co/) set ourselves to challenge precisely that.
 
 When we were presented with [Vertbase](https://www.vertbase.com/), a project which entailed the concerns we just mentioned above, our thoughts were with React Native. Straight off the bat.
 
@@ -95,4 +95,4 @@ However, there are some points we've learned with this experience which we can r
 
 Bottom line, we faced a bunch of problems while developing a Cryptocurrency App in the Blockchain using React Native. It had its ups and downs, but in the end, it was extremely rewarding. We've learned a lot with our own mistakes, we spent hours figuring out one single deployment, but in the end, the whole thing got sorted. We hope we're paving the way for those who follow.
 
-In case you have any questions or facing any issues, feel free to get in touch with us.
+In case you have any questions or facing any issues, feel free to get in touch with me.
