feat(blog): add new post

--- a/src/content/projects/react-native-styl.mdx
+++ b/src/content/projects/react-native-styl.mdx
@@ -1,10 +1,10 @@
 export const metadata = {
-  priority: 3,
+  priority: 7,
   type: 'github',
   link: 'https://github.com/danilowoz/react-native-styl',
   title: 'React Native: React Native Styl',
   date: '2020-05-01T15:06:01.607Z',
   tagline: 'Easiest way to write stylesheets and free of dependencies.',
-  categories: ['Project', 'Typescript', 'React Native', 'Stylesheet'],
-  cover: './images/advanced-blog-system-in-gatsby/asset-1.png',
+  categories: ['TypeScript', 'React Native', 'StyleSheet'],
+  cover: './images/react-native-styl/cover.png',
 }
