fix(url): to https

--- a/src/content/projects/atomic-design-with-react.mdx
+++ b/src/content/projects/atomic-design-with-react.mdx
@@ -22,7 +22,7 @@ I have recently had the opportunity to work on a new product from scratch made i
 - Very specific components to each pages;
 
 We’ve started to build the CSS architecture using the [ITCSS](https://www.xfive.co/blog/itcss-scalable-maintainable-css-architecture/) methodology that organizes the style files on stacks from generics styles to the specifics ones, which helps you to scale large projects easily. But along with ITCSS, we were using CSS Modules to scope the components, so we noticed that component stack was getting huge and even the generic styles were being componentized and reused within other one.
-That was the moment in which we paused to rethink our architecture and how we could set the components in a more distributed and organized way. Then we found a methodology called [**Atomic Design**](http://bradfrost.com/blog/post/atomic-web-design/) that creates multiples stacks of components, with different hierarchies of complexity and dependence.
+That was the moment in which we paused to rethink our architecture and how we could set the components in a more distributed and organized way. Then we found a methodology called [**Atomic Design**](https://bradfrost.com/blog/post/atomic-web-design/) that creates multiples stacks of components, with different hierarchies of complexity and dependence.
 
 <img
   src="/images/atomic-design-with-react/asset-2.png"
@@ -161,9 +161,9 @@ However we could see that this architecture probably doesn’t work for every pr
 
 [CSS Architecture with ReactJS](https://cheesecakelabs.com/blog/css-architecture-reactjs/)
 
-[Atomic Web Design](http://bradfrost.com/blog/post/atomic-web-design/)
+[Atomic Web Design](https://bradfrost.com/blog/post/atomic-web-design/)
 
-[Patternlab](http://patternlab.io/)
+[Patternlab](https://patternlab.io/)
 
 [Using React within a design system](https://medium.com/buildit/using-react-within-a-design-system-73d4bb0cc822)
 
