--- a/src/content/projects/css-display-grid-and-sketch-layout.mdx
+++ b/src/content/projects/css-display-grid-and-sketch-layout.mdx
@@ -192,8 +192,8 @@ And that changes everything again: since the web’s early days there have been 
 
 [**Grid by Example - Usage examples of CSS Grid Layout** The following examples include an image of how the example should look in a supporting browser, they each link to a…gridbyexample.com](https://gridbyexample.com/examples/ 'https://gridbyexample.com/examples/')[](https://gridbyexample.com/examples/)
 
-[**Grid layout is a much needed step-change for CSS** The aim of CSS was to separate content and style but our layouts are as tied to our markup as ever. Grid layout has the…maketea.co.uk](http://maketea.co.uk/2016/09/28/css-grid-layout-is-a-step-change.html 'http://maketea.co.uk/2016/09/28/css-grid-layout-is-a-step-change.html')[](http://maketea.co.uk/2016/09/28/css-grid-layout-is-a-step-change.html)
+[**Grid layout is a much needed step-change for CSS** The aim of CSS was to separate content and style but our layouts are as tied to our markup as ever. Grid layout has the…maketea.co.uk](https://maketea.co.uk/2016/09/28/css-grid-layout-is-a-step-change.html 'https://maketea.co.uk/2016/09/28/css-grid-layout-is-a-step-change.html')[](https://maketea.co.uk/2016/09/28/css-grid-layout-is-a-step-change.html)
 
-[**fantasai 54: Evolution of CSS Layout: 1990s to the Future** After the conference, PhillyETE posted a screencast of the presentation, so anyone can watch it online. If you're at…fantasai.inkedblade.net](http://fantasai.inkedblade.net/weblog/2012/css-layout-evolution/ 'http://fantasai.inkedblade.net/weblog/2012/css-layout-evolution/')[](http://fantasai.inkedblade.net/weblog/2012/css-layout-evolution/)
+[**fantasai 54: Evolution of CSS Layout: 1990s to the Future** After the conference, PhillyETE posted a screencast of the presentation, so anyone can watch it online. If you're at…fantasai.inkedblade.net](https://fantasai.inkedblade.net/weblog/2012/css-layout-evolution/ 'https://fantasai.inkedblade.net/weblog/2012/css-layout-evolution/')[](https://fantasai.inkedblade.net/weblog/2012/css-layout-evolution/)
 
 [**CSS Grid Layout - creating complex grids** With the Blink and Webkit implementation moving on at great pace, a number of updates to the specification, and Mozilla…rachelandrew.co.uk](https://rachelandrew.co.uk/archives/2015/02/04/css-grid-layout-creating-complex-grids/ 'https://rachelandrew.co.uk/archives/2015/02/04/css-grid-layout-creating-complex-grids/')[](https://rachelandrew.co.uk/archives/2015/02/04/css-grid-layout-creating-complex-grids/)
