--- a/src/content/projects/create-content-loader.mdx
+++ b/src/content/projects/create-content-loader.mdx
@@ -1,7 +1,7 @@
 export const metadata = {
   priority: 8,
   type: 'web',
-  link: 'http://danilowoz.com/create-content-loader',
+  link: 'https://danilowoz.com/create-content-loader',
   date: '2020-01-01T15:06:01.607Z',
   title: 'Design tool: Create content loader',
   tagline:
