--- a/src/content/projects/create-content-loader.mdx
+++ b/src/content/projects/create-content-loader.mdx
@@ -7,5 +7,5 @@ export const metadata = {
   tagline:
     'Create fully customizable skeleton animations for your website with React Content Loader.',
   categories: ['Design tool', 'Skeleton', 'React', 'React Native'],
-  cover: './images/react-content-loader/cover-create.jpg',
+  cover: '/images/react-content-loader/cover-create.jpg',
 }
