--- a/src/content/projects/react-content-loader.mdx
+++ b/src/content/projects/react-content-loader.mdx
@@ -7,5 +7,5 @@ export const metadata = {
     'UI pattern loading to show as soon as possible a mirror of the layout you expect to have once data arrives.',
   date: '2020-01-01T15:06:01.607Z',
   categories: ['Design tool', 'Skeleton', 'React', 'React Native'],
-  cover: './images/react-content-loader/cover.png',
+  cover: '/images/react-content-loader/cover.png',
 }
