--- a/src/content/projects/react-native-styl.mdx
+++ b/src/content/projects/react-native-styl.mdx
@@ -6,5 +6,5 @@ export const metadata = {
   date: '2020-05-01T15:06:01.607Z',
   tagline: 'Easiest way to write stylesheets and free of dependencies.',
   categories: ['TypeScript', 'React Native', 'StyleSheet'],
-  cover: './images/react-native-styl/cover.png',
+  cover: '/images/react-native-styl/cover.png',
 }
