--- a/src/content/about-me.mdx
+++ b/src/content/about-me.mdx
@@ -4,9 +4,9 @@
 
 I wasn’t always a developer, and honestly, I don’t know how I became one. But for a long time - to be exact since 2012 - I’m here doing my best, not just building applications, but solving real problems. My degree is in Design, and I’ve always been excited about the true meaning of Design, which is to deliver functional products through a deep and meaningful experience.
 
-My first experience with development was implementing my own layouts in the oldest fashioned way possible - HTML, CSS, and jQuery. Then I saw there an opportunity to do something better than I was used to seeing on the web. From that moment on, I went through a couple of digital agencies where I was able to improve my hard skills a lot, thanks to fantastic people I had the chance to meet.
+My first experience with development was implementing my own layouts in the oldest fashioned way possible - HTML, CSS, and jQuery. Then I saw an opportunity to do something better than I was used to seeing on the web. From that moment on, I went through a couple of digital agencies where I improved my hard skills a lot, thanks to fantastic people I had the chance to meet.
 
-Then after spending some time on a new challenge, working with a huge product that influenced thousands of people a day, I was able to realize what is the real impact of my job in development and that I need to always push myself. As a result of this and many interactions with the development community, I’ve begun writing some open-source projects, which gave me a lot of opportunities, from working with many awesome people from all around the world to getting a new position abroad.
+After spending some time on a new challenge and working with a huge product that influenced thousands of people a day, I realized the real impact of my job in development and that I need to always push myself. As a result of this and many interactions with the development community, I’ve begun writing open-source projects, which gave me a lot of opportunities, from working with many awesome people from all around the world to getting a new position abroad.
 
 Therefore, the main lesson so far is that the more I share knowledge and teach my colleagues, the more I see that my learning journey is far from over.
 
@@ -22,7 +22,7 @@ _React, React Native, Typescript, Graphql, Apollo, Styled-components, Nextjs, Ga
 
 ##### Design
 
-_The interface design is much more than ship layouts, and the development process must be not only accurate, but work together and aim at the same result._
+_The interface design is much more than ship layouts, and the development process must be not only accurate but work together and aim at the same result._
 
 <span>
 
