fix(content): update title

--- a/src/content/projects/generating-typescript-types-and-react-hooks-based-on-graphql-endpoint.mdx
+++ b/src/content/projects/generating-typescript-types-and-react-hooks-based-on-graphql-endpoint.mdx
@@ -2,7 +2,7 @@ export const metadata = {
   priority: 2,
   type: 'article',
   title:
-    'Generating TypeScript types and React Hooks based on GraphQL endpoint',
+    'How to use React Hooks on Code Generator GraphQL',
   tagline:
     'Autogenerate Typescript types and custom React hooks in React applications with GraphQL Code Generator.',
   date: '2020-21-07T19:28:06.529Z',
