--- a/src/content/projects/react-native-styl.mdx
+++ b/src/content/projects/react-native-styl.mdx
@@ -4,7 +4,7 @@ export const metadata = {
   link: 'https://github.com/danilowoz/react-native-styl',
   title: 'React Native: React Native Styl',
   date: '2020-05-01T15:06:01.607Z',
-  tagline: 'Easiest way to write stylesheets and free of dependencies.',
+  tagline: 'The easiest way to write stylesheets and free of dependencies.',
   categories: ['TypeScript', 'React Native', 'StyleSheet'],
   cover: '/images/react-native-styl/cover.png',
 }
